eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: legal-referral-ingress-http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "notification.sixteenbrains.studio"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: legal-referral-notification-service
                port:
                  number: 80
  tls:
    - hosts:
        - "notification.sixteenbrains.studio"
      secretName: legal-referral-tls
